examples/fail/fail_exception_default_fn/project.bri
export const project = {
  dependencies: {
    std: "*",
  },
};

export default () => {
  throw new Error("default export exception");
};
